Improved the change to CFParse to handle Java 7+